fixed comment & confession form length and fixed some whitespace issues

--- a/front-end/src/components/navbar/RegisterForm.scss
+++ b/front-end/src/components/navbar/RegisterForm.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  // margin-left: 35%;
+  // margin-right: 35%;
   // align-self: center;
   transition: 800ms;
   opacity: 1;
@@ -47,7 +47,7 @@
 
 .register-form--error {
   color: rgba(253, 0, 0, 0.932);
-  margin-left: 35%;
+  // margin-left: 35%;
 }
 
 
