--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -7,6 +7,12 @@ body {
     font-family: 'Ruda', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 
 code {
